--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -240,6 +240,9 @@
 				RelativePath="..\..\..\mappolygons.cpp">
 			</File>
 			<File
+				RelativePath="..\mdump.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\messagedlg.cpp">
 			</File>
 			<File
