--- a/configure.in
+++ b/configure.in
@@ -181,10 +181,10 @@ AC_ARG_ENABLE( paragui, [  --disable-paragui       Don't use paragui .], usepara
 
 if test "x$useparagui" != "xno"; then
 
-   AM_PATH_PARAGUI(1.0.1,
+   AM_PATH_PARAGUI(1.0.4,
                :,
                AC_MSG_ERROR([[
-   *** PARAGUI version 1.0.1 not found! ASC requires the Paragui library.
+   *** PARAGUI version 1.0.4 not found! ASC uses the Paragui library.
    If you have a distribution supplied Paragui.RPM installed, perhaps the
    Paragui-devel.RPM is missing. If your distribution does not include the
    Paragui library, you can get it from http://www.paragui.org/
