--- a/source/dialogs/Makefile.am
+++ b/source/dialogs/Makefile.am
@@ -5,10 +5,10 @@ AM_CXXFLAGS             = $(SDL_CFLAGS) $(PARAGUI_CFLAGS)  $(SIGC_CFLAGS) -Dmain
 
 noinst_LTLIBRARIES      = libdialogs.la libgamedialogs.la libmapeddialogs.la
 
-libdialogs_la_SOURCES   = editmapparam.cpp cargowidget.cpp selectionwindow.cpp fileselector.cpp playersetup.cpp alliancesetup.cpp newgame.cpp soundsettings.cpp emailsetup.cpp unitinfodialog.cpp ammotransferdialog.cpp
+libdialogs_la_SOURCES   = editmapparam.cpp cargowidget.cpp selectionwindow.cpp fileselector.cpp playersetup.cpp alliancesetup.cpp newgame.cpp soundsettings.cpp emailsetup.cpp unitinfodialog.cpp 
 libdialogs_la_LIBADD    = @SDL_LIBS@ 
 
-libgamedialogs_la_SOURCES   = cargodialog.cpp vehicletypeselector.cpp unitcounting.cpp cargowidget.cpp
+libgamedialogs_la_SOURCES   = cargodialog.cpp vehicletypeselector.cpp unitcounting.cpp cargowidget.cpp ammotransferdialog.cpp
 libgamedialogs_la_LIBADD    = @SDL_LIBS@ 
 
 libmapeddialogs_la_SOURCES   = cargoeditor.cpp cargowidget.cpp
