--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,9 +1,9 @@
-SUBDIRS 		= dialog @MUSICDIR@
+SUBDIRS 		= dialog units trrobj trrobj2 buildings @MUSICDIR@
 
 MAINTAINERCLEANFILES    = Makefile.in
 # main.con buildings.con mk1.con trrobj.con trrobj2.con
 
-pkgdata_DATA 		= main.con buildings.con mk1.con trrobj.con trrobj2.con asc.gfx units-mk3.con
+pkgdata_DATA 		= main.con 
 
 pkgdatadir 		= $(datadir)/games/@PACKAGE@
 
