--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -185,10 +185,10 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-SUBDIRS = dialog @MUSICDIR@
+SUBDIRS = dialog units trrobj trrobj2 buildings @MUSICDIR@
 MAINTAINERCLEANFILES = Makefile.in
 # main.con buildings.con mk1.con trrobj.con trrobj2.con
-pkgdata_DATA = main.con buildings.con mk1.con trrobj.con trrobj2.con asc.gfx units-mk3.con
+pkgdata_DATA = main.con 
 all: all-recursive
 
 .SUFFIXES:
