Lots of BugFixes

--- a/data/dialog/Makefile.am
+++ b/data/dialog/Makefile.am
@@ -1,8 +1,8 @@
 pkgdatadir 		= $(datadir)/games/@PACKAGE@
 
-pkgdata_DATA = asc_dlg.zip
+pkgdata_DATA = asc2_dlg.zip
 
-asc_dlg.zip: asc2_dlg.theme
+asc2_dlg.zip: asc2_dlg.theme
 	chmod -R g-w asc*
 	chmod -R o-w asc*
-	(zip -9 -r asc_dlg.zip asc_dlg.theme asc2_dlg.theme ./asc/* -i *.png *.bmp *.ttf *.theme)
+	(zip -9 -r asc2_dlg.zip asc_dlg.theme asc2_dlg.theme ./asc/* -i *.png *.bmp *.ttf *.theme)
