--- a/configure.in
+++ b/configure.in
@@ -311,8 +311,7 @@ LIBPHYSFS="-lphysfs"
     if test x$have_physfs_include = xno; then
           AC_MSG_ERROR(
       [*** Unable to find PhysFS header file! (http://www.icculus.org/physfs)]
-      [Please install the library and header files if you want to link to the shared library,]
-      [or run './configure --enable-internalphysfs' to compile an internal version of physfs.] 
+      [Please install the library and header files]
       )
     fi
 
@@ -321,8 +320,7 @@ LIBPHYSFS="-lphysfs"
     if test x$have_physfs_lib = xno; then
    AC_MSG_ERROR(
        [*** Unable to find PhysFS library! (http://www.icculus.org/physfs)]
-       [Please install the library and header files if you want to link to the shared library,]
-       [or run './configure --enable-internalphysfs' to compile an internal version of physfs.] 
+       [Please install the library and header files.]
        )
     fi
 
